Improve instance selector integration test